--- a/src/App.css
+++ b/src/App.css
@@ -34,3 +34,13 @@
   color: var(--text-dark);
   min-height: 100vh;
 }
+
+.community_banner {
+  width: 100%;
+  height: 300px;
+}
+
+.community-container img {
+  width: 2rem;
+  height: 2rem;
+}
