--- a/src/Components/Toolbar/SideToolbar/SideToolbar.css
+++ b/src/Components/Toolbar/SideToolbar/SideToolbar.css
@@ -1,9 +1,10 @@
 .side-toolbar {
-  text-align: center;
+  text-align: start;
   padding: 1rem;
   width: 11rem;
   height: 100%;
   border-right: 1px solid var(--divider);
+  font-size: 0.8rem;
 }
 .content {
   width: 1300px;
@@ -19,20 +20,56 @@
   display: flex;
   flex-direction: column;
   gap: 0.4rem;
+  margin-top: 1rem;
 }
-.community-select {
+.policy-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.community-select,
+.policy-select,
+.home-menu {
   display: flex;
   justify-content: start;
   align-items: center;
   gap: 4px;
-  height: 1.4rem;
+  padding: 4px;
+  cursor: pointer;
+  border-radius: 10px;
+  height: 2rem;
 }
-.community-select img {
+.policy-select {
+  padding: 0;
+}
+.community-select img,
+.home-menu img {
   border-radius: 100%;
   width: 1.4rem;
+}
+.community-select:hover,
+.policy-select:hover,
+.home-menu:hover {
+  background-color: var(--input-hover-dark);
+}
+.resources_container button,
+.home-menu {
+  background-color: var(--input-dark);
+  border: none;
+  padding: 4px;
+  border-radius: 10px;
+  width: 100%;
+  text-align: start;
 }
 .divider {
   background-color: var(--divider);
   height: 1px;
-  margin: 0.4rem 0;
+  margin: 0.8rem 0;
+}
+.side-toolbar .toolbar-button {
+  height: 1.5rem;
+}
+.home-menu {
+  background-color: var(--background-dark);
+  color: var(--text-dark);
 }
