--- a/src/Pages/Policy/policy.css
+++ b/src/Pages/Policy/policy.css
@@ -7,6 +7,7 @@
   flex-direction: column;
   font-size: 0.8rem;
   border-radius: 10px;
+  margin: auto;
 }
 .policy h1 {
   margin-bottom: 2rem;
@@ -16,4 +17,7 @@
 }
 .policy p {
   margin-bottom: 1rem;
+}
+.policy_container {
+  padding-top: 4rem;
 }
